--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
 
   "name": "FartScroll",
   "description": "powered by fartscroll.js - http://theonion.github.io/fartscroll.js/",
-  "version": "1.0",
+  "version": "1.1",
 
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["jquery-2.0.0.js", "fartscroll.js", "script.js"]
+      "matches": ["<all_urls>"],
+      "js": ["fartscroll.js", "script.js"]
     }
   ]
 }
